<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">逸仙时空</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_title">标题</string>
    <string name="hint_content">正文</string>    
    <string name="text_login_btn">登录</string>
    <string name="text_save_user_name">记住用户名</string>
    <string name="text_save_password">记住密码</string>



    <string name="activity_title_topiclist">同主题阅读</string>
    <string name="activity_title_draft">草稿</string>
    <string name="add_new_post">发表新帖</string>
    <string name="new_post_choose_board">选择版面</string>


  
    <string name="view_mode_normal">帖子模式</string>
    <string name="view_mode_topic">主题模式</string>
    <string name="view_mode_digest">文摘</string>
    <string name="view_mode_best">精华</string>
    <string name="add_new_topic">发表新帖</string>
    <string name="add_to_favorite">添加收藏</string>
    <string name="delete_from_favorite">取消收藏</string>
    <string name="chronologically_desc">按时间降序</string>
    <string name="chronologically_asec">按时间升序</string>
    
  
    <string-array name="right_menu_items">
        <item>登录</item>
        <item>草稿</item>
        <item>设置</item>
        <item>更新</item>
        <item>关于</item>
    </string-array>
    
    <string name="title_activity_settings">设置</string>
    <string name="setting_post_order">帖子按时间降序排列</string>
    <string name="setting_post_mode">默认显示帖子模式</string>
    <string name="setting_clear_pic_cache">删除图片缓存</string>
    
    <string name="menu_title_share">分享</string>
    <string name="menu_title_copy">复制</string>
    <string name="menu_title_topic">同主题阅读</string>
    <string name="menu_title_delete">删除</string>
    
    <string name="loading">加载中</string>
    <string name="load_failure">网络错误，加载失败</string>
    <string name="load_cancelled">加载已取消</string>
    
    <string name="search_hint">搜索版面</string>
    
    <string name="label_pull">下拉刷新…</string>
  	<string name="label_release">放开以刷新…</string>
  	<string name="label_refreshing">正在载入…</string>
  	
    <string name="label_pull_clear_unread">上拉清除全站未读…</string>
  	<string name="label_release_clear_unread">放开清除全站未读…</string>
  	<string name="label_refreshing_clear_unread">正在清除全站未读…</string> 	
  	
  	<string name="clear_unread">清除未读</string>
  	
  	<string name="top10_loading">努力加载中…</string>
	<string name="top10_load_fail">加载失败，请下拉重试…</string>
	<string name="top10_unknown_error">未知错误，请下拉重试…</string>
	
	<string name="menu_tab_close">关闭</string>
	<string name="menu_tab_close_others">关闭其他</string>
	<string name="menu_tab_close_all">关闭全部</string>
	
	<string name="menu_view_attach">查看</string>
	<string name="menu_delete_attach">删除</string>
	<string name="menu_reselect_attach">重选</string>
	
	<string name="chooser_title">选择附件</string>
	<string name="choose_file">添加附件</string> 
</resources>