<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sysu.bbs.argo.MainActivity" >

    <item
        android:id="@+id/view_mode_normal"
        android:orderInCategory="100"
        android:title="@string/view_mode_normal"
        app:showAsAction="never"/>
    <item
        android:id="@+id/view_mode_topic"
        android:orderInCategory="100"
        android:title="@string/view_mode_topic"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_new_topic"
        android:orderInCategory="100"
        android:title="@string/add_new_topic"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_board_close"
        android:orderInCategory="100"
        android:title="@string/menu_tab_close"/>
    <item
        android:id="@+id/menu_board_close_others"
        android:orderInCategory="100"
        android:title="@string/menu_tab_close_others"/>
    <item
        android:id="@+id/menu_board_close_all"
        android:orderInCategory="100"
        android:title="@string/menu_tab_close_all"/>

</menu>