<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_pre_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#353535"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/hint_user_name"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:textColor="#FFFFFF" >
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="login"
                android:text="@string/text_login_btn"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/save_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="true"
                android:text="@string/text_save_user_name"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/save_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="true"
                android:text="@string/text_save_password"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>